Fix URI for assets, update some lists

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   
   <head>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <title>Software consulting for startups and enterprise teams - Databasically</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
   </head>
   <style> 
@@ -55,7 +55,7 @@
         </div>
         <div class="span4">
           <div class="well">
-            <h3>Let's discuss your project</h3>
+            <h3>Let's discuss<br>your project</h3>
             <form id="form5" name="form5" class="wufoo topLabel page" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://databasically1.wufoo.com/forms/s7x1x7/#public">
               <div class="control-group">
                 <label class="control-label"><strong>Name</strong></label>
@@ -106,22 +106,20 @@
             </div>
           </div>
           <div class="well">
-            <h4>Processes that we find very valuable:</h4>
+            <h4>Processes we find valuable:</h4>
             <ul>
-              <li>Pair programming</li>
-              <li>Agile development</li>
+              <li>Agile planning &amp; development</li>
+              <li>Wireframing to define ideas</li>
               <li>Test driven development</li>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>Pair programming</li>
             </ul>
           </div>
           <div class="well">
-            <h4>Software languages we like:</h4>
+            <h4>Technologies we like:</h4>
             <ul>
               <li>Ruby</li>
-              <li>jQuery</li>
-              <li></li>
+              <li>Javascript &amp; jQuery</li>
+              <li>Postgres, MySQL, &amp; other databases</li>
               <li></li>
               <li></li>
               <li></li>
