attempt at linking images

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h3>Experts in our community</h3>
             <div class="media">
               <a class="pull-left" href="http://rubymidwest.com/">
-                <img class="media-object" src="http://placehold.it/128x128">
+                <img class="media-object" alt="Ruby Midwest Kansas City Conference Logo" src="https://raw.github.com/databasically/databasicallydotcom/gh-pages/ruby%20midwest%20kansas%20city%20conference.png">
               </a>
               <div class="media-body">
                 <h4 class="media-heading">Ruby Midwest</h4>
@@ -97,7 +97,7 @@
             </div>
             <div class="media">
               <a class="pull-left" href="http://www.meetup.com/kcruby/">
-                <img class="media-object" src="http://placehold.it/128x128">
+                <img class="media-object" alt="Kansas City Ruby Meetup Logo" src="https://raw.github.com/databasically/databasicallydotcom/gh-pages/kansas%20city%20ruby.jpeg">
               </a>
               <div class="media-body">
                 <h4 class="media-heading">Ruby User Group</h4>
@@ -120,9 +120,6 @@
               <li>Ruby</li>
               <li>Javascript &amp; jQuery</li>
               <li>Postgres, MySQL, &amp; other databases</li>
-              <li></li>
-              <li></li>
-              <li></li>
             </ul>
           </div>
         </div>
