fixed erroneous copy

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           </div>
           <div class="well">
             <h3>Web application experts</h3>
-            <p>Lots of companies will tell you they can scale Rails, but we can prove it. Our largest production web application is currently holding XXXXTB of data.
-            Our first Rails application was built in a beta release over XXXX years ago, and the clients have been so happy with our work that we continue to actively develop that application today. Given our extensive experience, we prefer to use Ruby on Rails when we have a choice. We are also skilled with the following tools:</p>
+            <p>Lots of companies will tell you they can scale Rails, but we have done it. Our largest production web application is currently serving millions of records in live data.
+            Our first Rails application was built in a beta release over 6 years ago, and the clients have been so happy with our work that we continue to actively develop that application today. Given our extensive experience, we prefer to use Ruby on Rails when we have a choice. We are also skilled with the following tools:</p>
           </div>
           <div class="well">
             <h3>Our process</h3>
