--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="well">
             <h3>Web application experts</h3>
             <p>Lots of companies will tell you they can scale Rails, but we have done it. Our largest production web application is currently serving millions of records in live data.
-            Our first Rails application was built in a beta release over 6 years ago, and the clients have been so happy with our work that we continue to actively develop that application today. Given our extensive experience, we prefer to use Ruby on Rails when we have a choice. We are also skilled with the following tools:</p>
+            Our first Rails application was built in a beta release over 6 years ago, and the clients have been so happy with our work that we continue to actively develop that application today. Given our extensive experience, we prefer to use Ruby on Rails when we have a choice.</p>
           </div>
           <div class="well">
             <h3>Our process</h3>
