omg why didn't we just put the images on S3 to start

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h3>Experts in our community</h3>
             <div class="media">
               <a class="pull-left" href="http://rubymidwest.com/">
-                <img class="media-object" alt="Ruby Midwest Kansas City Conference Logo" src="https://github.com/databasically/databasicallydotcom/raw/gh-pages/ruby%20midwest%20kansas%20city%20conference.png">
+                <img class="media-object" alt="Ruby Midwest Kansas City Conference Logo" src="https://s3.amazonaws.com/databasically-marketing/ruby+midwest+kansas+city+conference.png">
               </a>
               <div class="media-body">
                 <h4 class="media-heading">Ruby Midwest</h4>
@@ -97,7 +97,7 @@
             </div>
             <div class="media">
               <a class="pull-left" href="http://www.meetup.com/kcruby/">
-                <img class="media-object" alt="Kansas City Ruby Meetup Logo" src="https://github.com/databasically/databasicallydotcom/raw/gh-pages/kansas%20city%20ruby.jpeg">
+                <img class="media-object" alt="Kansas City Ruby Meetup Logo" src="https://s3.amazonaws.com/databasically-marketing/kansas+city+ruby.jpeg">
               </a>
               <div class="media-body">
                 <h4 class="media-heading">Ruby User Group</h4>
