--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
             <p>Changing the world, one line of code at a time</p>
           </div>
           <div class="well">
-            <h3>Why we love what we do</h3>
-            <p>Software has the power to transform the way we live. It is limited only by our imaginations. Software and the internet once promised us all a better world, where life would be better, easier, and happier. We belive in this promise, and we work to make it a reality, one client at a time.</p>
+            <h3>Who we work with</h3>
+            <p>
+            	Software and the internet once promised us all a better world, where life would be better, easier, and happier. Instead we got tons of advertising and people tracking everything about us. We still belive in this promise, and we work to make it a reality, one client at a time.
+          	</p>
           </div>
           <div class="well">
             <h3>Web application experts</h3>
@@ -48,10 +50,10 @@
             <h3>Professionals</h3>
             <p>Have you ever worked with a developer that had a hard time meeting their commitments? We are organized and hard working midwestern people. Our region is rooted in rural farming, where people work by the sun’s clock or they don’t deliver any crops. Our philosophy is to work hard every day and to treat your needs like the sunlight, so you always know that you can count on us.</p>
           </div>
-          <div class="well">
-            <h3>Start small guarantee</h3>
-            <p>When you trust someone to build your vision, it's critical that you find someone that is a good partner. To make sure that we are a good fit for you, we prefer to start with a small project. This allows you to assess our code quality, process, and commitment first hand. And if we do a small project for you and you think we didn’t provide value for your money, we will give you a full refund.</p>
-          </div>
+          <!-- <div class="well"> -->
+            <!-- <h3>Start small guarantee</h3> -->
+            <!-- <p>When you trust someone to build your vision, it's critical that you find someone that is a good partner. To make sure that we are a good fit for you, we prefer to start with a small project. This allows you to assess our code quality, process, and commitment first hand. And if we do a small project for you and you think we didn’t provide value for your money, we will give you a full refund.</p> -->
+          <!-- </div> -->
         </div>
         <div class="span4">
           <div class="well">
