--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
   <style> 
     body { 
       padding-top: 65px;
+      background: #007100 url(https://s3.amazonaws.com/databasically-marketing/leather_1.png) left top repeat;
     }
+    
+    footer.footer div.top {
+			min-height: 120px;
+			margin-top: 80px;
+			padding: 20px 0;
+			background-color: #eee;
+		}
+		
+		footer.footer div.bottom {
+			padding: 15px 0 5px 0;
+			background-color: #ccc;
+			text-align: right;
+		}
   </style>
   <body>
     <div class="navbar navbar-fixed-top">
@@ -128,5 +142,36 @@
       </div>
     </div>
   </body>
-
+	<footer class=footer>
+		<div class=top>
+			<div class=container>
+				<div class=row>
+					<div class=span5>
+						<h3>Contact information</h3>
+						<p>
+							Databasically, Inc.<br>
+							14539 West 96th Terrace<br>
+							Lenexa, KS 66215<br>
+							phone: (877) 767-3559<br>
+							email: contact@databasically.com
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class=bottom>
+			<div class=container>
+				<div class=row>
+					<div class="span12">
+						<p>&copy; <a href="http://databasically.com">Databasically</a> 2011-2012 all rights reserved - <a href="#">Terms of Service</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript">
+		
+		  
+		
+		</script>
+	</footer>
 </html>
