--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="well">
             <h3>Who we work with</h3>
             <p>
-            	Software and the internet once promised us all a better world, where life would be better, easier, and happier. Instead we got tons of advertising and people tracking everything about us. We still belive in this promise, and we work to make it a reality, one client at a time.
+            	Software and the internet once promised us all a better world, where life would be better, easier, and happier. Instead we got tons of advertising and people tracking everything about us. We still belive in this promise and we work to make it a reality. We only work with clients who share our vision to improve the world.
           	</p>
           </div>
           <div class="well">
