adjusted top copy

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
       </div>
       <div class="span9">
         <section id="masthead">
-         <h1>BIG IDEAS</h1>
-         <h1>SMALL STUDIO</h1>
-         <h1>MODERN</h1>
-         <h1>APPROACH</h1>
+          <h1>AT DATABASICALLY</h1>
+          <h1>WE BUILD</h1>
+          <h1>BULLETPROOF WEB APPLICATIONS</h1>
+          <h1>FOR STARTUPS</h1>
+          <h1>AND LARGE COMPANIES</h1>
         </section>
 
 
