added some links but not done with it yet

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
           <li><a href="#mission">Mission</a></li>
           <li><a href="#work">Portfolio</a></li>
           <li><a href="#about">About Us</a></li>
+          <br />
+          <li><a href="#">Process</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
