added link for testing

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="clearfix"> 
               <div class="portfolio"> 
                 <figure class="entry web"> 
-                  <a href="#">
+                  <a href="portfolio_detail.html">
                     <img src="img/portfolio-image.jpg" alt="">
                   </a>
                 </figure> 
