still tweaking layout on portfolio detail template

--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -5,9 +5,13 @@
     <title>portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <link rel="stylesheet" href="https://app.divshot.com/css/bootstrap.css">
-    <link rel="stylesheet" href="https://app.divshot.com/css/bootstrap-responsive.css">
-    <link rel="stylesheet" href="https://djyhxgczejc94.cloudfront.net/builds/80037b02082b29f5f9cea127cab2a4ba4365ec67.css">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="assets/css/docs.css" rel="stylesheet">
+    <link href="assets/css/m-forms.css" rel="stylesheet">
+    <link href="assets/css/m-buttons.css" rel="stylesheet">
+    <link href="assets/css/custom.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300' rel='stylesheet' type='text/css'>
     <script src="https://app.divshot.com/js/jquery.min.js"></script>
     <script src="https://app.divshot.com/js/bootstrap.min.js"></script>
   </head>
@@ -16,22 +20,16 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#">Your Company</a>
+          <a href="#" class="brand"><img src="img/databasically-square.png" alt="logo"></a>
           <div class="navbar-content">
             <ul class="nav ">
-              <li class="active">
-                <a href="#">Home</a> 
-              </li>
-              <li>
-                <a href="#">About</a> 
-              </li>
+              <li><a href="index.html">Home</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="container">
-      <a class="btn btn-large btn-primary btn-block visible-phone" href="#"><span class="btn-label">Sign Up Today!</span></a>
       <div class="row main-features">
         <div class="span2">
           <span class="label label-success">OVERVIEW</span> 
@@ -95,13 +93,10 @@
           <h5>Technologies</h5>
           <ul>
             <li>Ruby on Rails</li>
-          </ul>
-          <ul>Node.js</ul>
-          <ul>Amazon S3</ul>
-          <ul>Akamai CDN</ul>
-          <ul>Heroku</ul>
-          <ul>
-            <br> 
+            <li>Node.js</li>
+            <li>Amazon S3</li>
+            <li>Akamai CDN</li>
+            <li>Heroku</li>
           </ul>
         </div>
       </div>
