--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -20,7 +20,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a href="#" class="brand"><img src="img/databasically-square.png" alt="logo"></a>
+          <a href="#" class="navbar-brand"><img src="img/databasically-logo-with-text.png" alt="logo"></a>
           <div class="navbar-content">
             <ul class="nav ">
               <li><a href="index.html">Home</a></li>
