--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -17,15 +17,13 @@
   </head>
   
   <body>
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
           <a href="#" class="navbar-brand"><img src="img/databasically-logo-with-text.png" alt="logo"></a>
-          <div class="navbar-content">
-            <ul class="nav ">
-              <li><a href="index.html">Home</a></li>
+            <ul class="nav pull-right">
+              <li><a href="index.html"><- go back</a></li>
             </ul>
-          </div>
         </div>
       </div>
     </div>
