a good enough version of the portfolio template 3

--- a/portfolio_detail3.html
+++ b/portfolio_detail3.html
@@ -12,6 +12,7 @@
     <link href="assets/css/m-buttons.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <script src="https://app.divshot.com/js/jquery.min.js"></script>
     <script src="https://app.divshot.com/js/bootstrap.min.js"></script>
   </head>
@@ -108,10 +109,10 @@
         </div>
         <div class="span4">
           <h5>Milestones</h5>
-          <ul>
-            <li>Completed on-time</li>
-            <li>Delivered on-budget</li>
-            <li>ROI:
+          <ul class="icons-ul">
+            <li><i class="portfolio icon-2x icon-li icon-calendar"></i>Completed on-time</li>
+            <li><i class="portfolio icon-2x icon-li icon-money"></i>Delivered on-budget</li>
+            <li><i class="portfolio icon-2x icon-li icon-signal"></i>ROI:
               <b>1 month</b> 
             </li>
           </ul>
