a few more icons

--- a/portfolio_detail3.html
+++ b/portfolio_detail3.html
@@ -68,10 +68,10 @@
         </div>
         <div class="span4">
           <h5>Required services</h5>
-          <ul>
-            <li>Startup hypothesis and testing</li>
-            <li>Startup risk management methodologies</li>
-            <li>Data driven technical development</li>
+          <ul class="icons-ul">
+            <li><i class="portfolio icon-2x icon-li icon-list-ol"></i>Startup hypothesis and testing</li>
+            <li><i class="portfolio icon-2x icon-li icon-warning-sign"></i>Startup risk management methodologies</li>
+            <li><i class="portfolio icon-2x icon-li icon-cogs"></i>Data driven technical development</li>
           </ul>
         </div>
       </div>
